# mario

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  pyproject.toml  server.py
specs/: 00-architecture.md  01-config.md  02-security.md  03-executor.md  04-audit.md  05-tools-shell.md  06-tools-filesystem.md  07-server.md  08-tools-search.md
tests/: test_dynamic_tools.py  test_mode.py  test_server.py
