[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mario"
version = "0.1.0"
description = "MCP server for DevOps shell operations"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mario = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["server.py"]

[tool.coverage.run]
source = ["server"]
